apps/ftx-dashboard/k8s/base/k8s-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "${SERVICE_NAME}"}'
  name: ${SERVICE_NAME}
spec:
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  selector:
    app: ${SERVICE_NAME}
  type: ClusterIP
