apps/ftx-dashboard/k8s/base/k8s-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${SERVICE_NAME}
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://traefik-forward-auth.kube-system.svc.cluster.local
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
spec:
  rules:
    - host: dashboard.ftx.dev.muwazana.com
      http:
        paths:
          - backend:
              serviceName: ftx-dashboard
              servicePort: http
            path: /
          - backend:
              serviceName: websocket-service
              servicePort: http
            path: /ws
          - backend:
              serviceName: websocket-service
              servicePort: http
            path: /socket.io
